<resources>
    <string name="app_name">Calendula</string>
    <string name="title_home">Home</string>
    <string name="title_daily_agenda">Today</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove">Remove</string>
    <string name="action_remove_all">Remove all</string>
    <string name="action_exit">Exit</string>
    <string name="home_menu_routines">ROUTINES</string>
    <string name="home_menu_medicines">MEDICINES</string>
    <string name="home_menu_schedules">SCHEDULES</string>
    <string name="home_menu_pharmacies">Pharmacies</string>
    <string name="home_menu_plantrip">Plan trip</string>
    <string name="action_bar_title_today">Today</string>
    <string name="action_bar_title_home">Home</string>
    <string name="medicine">medicine</string>
    <string-array name="home_action_list">
        <item>Calendula</item>
        <item>Routines</item>
        <item>Medicines</item>
        <item>Schedules</item>
    </string-array>
    <string name="drawer_top_option">Top</string>
    <string name="drawer_menu_option">Menu</string>
    <string name="drawer_bottom_option">Bottom</string>
    <string name="drawer_services_option">Tools</string>
    <string name="drawer_help_option">Tour</string>
    <string name="drawer_settings_option">Settings</string>
    <string name="drawer_about_option">About</string>
    <string-array name="home_drawer_actions">
        <item>@string/drawer_top_option</item>
        <item>Home</item>
        <item>@string/drawer_menu_option</item>
        <item>Routines</item>
        <item>@string/title_activity_medicines</item>
        <item>Schedules</item>
        <item>@string/drawer_services_option</item>
        <item>Pharmacies</item>
        <item>Plan trip</item>
        <item>@string/drawer_bottom_option</item>

    </string-array>
    <string name="title_activity_routines">Routines</string>
    <string name="title_edit_routine_activity">Edit routine</string>
    <string name="title_create_routine_activity">Create routine</string>
    <string name="title_activity_medicines">Medicines</string>
    <string name="title_edit_medicine_activity">Edit medicine</string>
    <string name="title_create_medicine_activity">Create medicine</string>
    <string name="title_edit_schedule_activity">Edit schedule</string>
    <string name="title_create_schedule_activity">Create schedule</string>
    <string name="routine_name">Routine name</string>
    <string name="routine_time">Time</string>
    <string name="edit_routine_button_text">Save changes</string>
    <string name="create_routine_button_text">Create routine</string>
    <string name="create_new_routine">Create new routine…</string>
    <string name="add_routine_button">ADD ROUTINE </string>
    <string name="medicine_name">Med name</string>
    <string name="medicine_description">Med description</string>
    <string name="medicine_presentation">Presentation</string>
    <string name="edit_medicine_button_text">Save changes</string>
    <string name="create_medicine_button_text">Create medicine</string>
    <string name="add_medicine_button">ADD MEDICINE</string>
    <string name="no_stock_info_msg">No stock info</string>
    <string name="title_activity_schedules">Schedules</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="delay">Delay</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="meds_time">Remember to take your meds</string>
    <string name="meds_time_lost">Alarm lost</string>
    <string name="title_select_dose_dialog">Introduce a dose</string>
    <string name="doses_and_times">Times and doses</string>
    <string name="schedule_repeat_days">Repeat</string>
    <string name="summary_title">Check and confirm</string>
    <string name="title_activity_schedule_list">Schedules</string>
    <string name="add_schedule_button">ADD SCHEDULE</string>
    <string name="summary">Summary</string>
    <string name="injections">Injections</string>
    <string name="pills">Pills</string>
    <string name="capsules">Capsules</string>
    <string name="inhaler">Inhaler</string>
    <string name="drops">Drops</string>
    <string name="pomade">Pomade</string>
    <string name="syrup">Syrup</string>
    <string name="spray">Spray</string>
    <string name="patches">Patches</string>
    <string name="unknown">Unknown</string>
    <string name="effervescent">Effervescent</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_type">Schedule type</string>
    <string name="injections_units">injections</string>
    <string name="pills_units">pill</string>
    <string name="capsules_units">capsule</string>
    <string name="inhaler_units">inhalations</string>
    <string name="spray_units">applications</string>
    <string name="drops_units">drop</string>
    <string name="pomade_units">applications</string>
    <string name="syrup_units">ml</string>
    <string name="patches_units">patch</string>
    <string name="unknown_units">Units</string>
    <string name="effervescent_units">sachet</string>
    <string name="never">Never</string>
    <string name="every_day">Every day</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="tree_times_a_day">Three times a day</string>
    <string name="four_times_a_day">Four times a day</string>
    <string name="times_a_day">times a day</string>
    <string name="and">and</string>
    <string-array name="schedules_array">
        <item>@string/once_a_day</item>
        <item>@string/twice_a_day</item>
        <item>@string/tree_times_a_day</item>
        <item>@string/four_times_a_day</item>
    </string-array>
    <string-array name="delays_array">
        <item>1 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
    <string name="routine_breakfast">Breakfast</string>
    <string name="routine_lunch">Lunch</string>
    <string name="routine_dinner">Dinner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_notification_title_template">%1$s</string>
    <string name="message_notification_placeholder_text_template">%1$s</string>
    <string name="action_take_now">Take now</string>
    <string name="action_delay">Delay</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_agenda_detail">AgendaDetailActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="splash_quote">Therapy management made easy</string>
    <string name="toolbar_menu_title">Menu</string>
    <string name="schedule_timetable_time_column">TIME</string>
    <string name="schedule_timetable_dose_column">DOSE</string>
    <string name="hourly_repeat_dose">Dose</string>
    <string name="take">Take</string>
    <string name="first_intake">First intake at</string>
    <string name="schedule_day_selector_take">Take:</string>
    <string-array name="day_names">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="schedule_day_selector_mo">MO</string>
    <string name="schedule_day_selector_tu">TU</string>
    <string name="schedule_day_selector_we">WE</string>
    <string name="schedule_day_selector_th">TH</string>
    <string name="schedule_day_selector_fr">FR</string>
    <string name="schedule_day_selector_sa">SA</string>
    <string name="schedule_day_selector_su">SU</string>
    <string name="agenda_zoom_meds_time">It\'s time to take some meds!</string>
    <string name="create_schedule_unselected_med">Select a med in order to create a schedule</string>
    <string name="create_schedule_incomplete_items">Select routines for all your intakes</string>
    <string name="create_schedule_incomplete_doses">Doses must be greater than zero</string>
    <string name="home_no_pending_meds_message">There are no pending meds for today</string>
    <string name="work_in_progress">This feature will be available in future versions. Thanks you!</string>
    <string name="medicine_created_message">Med created!</string>
    <string name="medicine_deleted_message">Med deleted!</string>
    <string name="medicine_edited_message">Med updated!</string>
    <string name="routine_created_message">Routine created!</string>
    <string name="routine_deleted_message">Routine deleted!</string>
    <string name="routine_edited_message">Routine updated!</string>
    <string name="schedule_created_message">Schedule created!</string>
    <string name="schedule_no_day_specified_message">You must specify at least one day</string>
    <string name="cycle_period_cero_message">Cycle intake and rest must be greater than zero</string>
    <string name="reminder_delayed_message">Routine delayed </string>
    <string name="reminder_cancelled_message">Reminder cancelled</string>
    <string name="remove_routine_message_long">The routine %1$s has associated schedules that will be lost if you delete it. Do you want to remove it anyway?</string>
    <string name="remove_medicine_message_long">%1$s has associated schedules that will be lost if you delete it. Do you want to remove it anyway?</string>
    <string name="remove_routine_message_short">Remove %1$s routine?</string>
    <string name="remove_medicine_message_short">Remove %1$s?</string>
    <string name="remove_routine_dialog_title">Remove routine</string>
    <string name="remove_medicine_dialog_title">Remove medicine</string>
    <string name="remove_schedule_dialog_title">Remove schedule</string>
    <string name="remove_schedule_message">Remove the schedule of %1$s?</string>
    <string name="dialog_yes_option">Yes</string>
    <string name="dialog_no_option">No</string>
    <string name="medicine_no_name_error_message">Please, type a name</string>
    <string name="medicine_unselected">Not selected yet</string>
    <string name="medicine_no_presentation_error_message">Please, select a presentation</string>
    <string name="tutorial_welcome_title">Welcome to Calendula!</string>
    <string name="tutorial_welcome_text">Calendula will help you manage your therapeutic schedule. Pending meds for today are shown in this screen.</string>
    <string name="tutorial_homeinfo_title">Explore!</string>
    <string name="tutorial_homeinfo_text">You can access to all Calendula features through the menu. You can also reach the most common options by swiping right!</string>
    <string name="tutorial_routine_title">Make good habits</string>
    <string name="tutorial_routine_text">Routines allow you to associate medication intakes with your daily activities. Add your own routines and don\'t worry about therapy interferences!</string>
    <string name="tutorial_meds_title">Manage your medicines</string>
    <string name="schedule_type_routines_title">Routine schedule</string>
    <string name="schedule_type_hourly_title">Dosing interval</string>
    <string name="schedule_type_period_title">Period + rest</string>
    <string name="schedule_type_routines_description">Ex: Every 3 days, at breakfast, lunch and dinner</string>
    <string name="schedule_type_hourly_description">Ex: Each 8 hours</string>
    <string name="schedule_type_period_description">Ex: 21 days + 7 days of rest</string>
</resources>