<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!--<TextView-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/schedule_day_selector_take"-->
        <!--android:textColor="@color/android_blue"            -->
        <!--android:layout_weight="0"-->
        <!--android:gravity="center"-->
        <!--android:visibility="gone" />-->

        <TextView
            android:id="@+id/day_mo"
            style="@style/schedule_day_selected"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:background="@drawable/dayselector_circle"
            android:gravity="center"
            android:text="@string/schedule_day_selector_mo" />

        <TextView
            android:id="@+id/day_tu"
            style="@style/schedule_day_selected"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:background="@drawable/dayselector_circle"
            android:gravity="center"
            android:text="@string/schedule_day_selector_tu" />

        <TextView
            android:id="@+id/day_we"
            style="@style/schedule_day_selected"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:background="@drawable/dayselector_circle"
            android:gravity="center"
            android:text="@string/schedule_day_selector_we" />

        <TextView
            android:id="@+id/day_th"
            style="@style/schedule_day_selected"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:background="@drawable/dayselector_circle"
            android:gravity="center"
            android:text="@string/schedule_day_selector_th" />

        <TextView
            android:id="@+id/day_fr"
            style="@style/schedule_day_selected"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:background="@drawable/dayselector_circle"
            android:gravity="center"
            android:text="@string/schedule_day_selector_fr" />

        <TextView
            android:id="@+id/day_sa"
            style="@style/schedule_day_selected"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:background="@drawable/dayselector_circle"
            android:gravity="center"
            android:text="@string/schedule_day_selector_sa" />

        <TextView
            android:id="@+id/day_su"
            style="@style/schedule_day_selected"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:background="@drawable/dayselector_circle"
            android:gravity="center"
            android:text="@string/schedule_day_selector_su" />

        <!--<CheckBox-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="All"-->
        <!--android:id="@+id/day_check_all"-->
        <!--android:layout_weight="1.5"-->
        <!--android:textColor="@color/android_blue"-->
        <!--android:visibility="gone" />-->

    </LinearLayout>
</RelativeLayout>