<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:id="@+id/schedule_type_routines"
      android:orientation="vertical"
      >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/schedule_type_routines_title"
        android:textColor="@color/android_blue_dark"
        android:paddingLeft="26dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="26dp"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        android:paddingLeft="46dp"
        android:textSize="14dp"
        android:text="@string/schedule_type_routines_description"
        android:textColor="#222"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:id="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E0EAEF"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:id="@+id/schedule_type_hourly"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/schedule_type_hourly_title"
        android:paddingLeft="26dp"
        android:paddingTop="5dp"
        android:textColor="@color/android_blue_dark"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="26dp"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        android:paddingLeft="46dp"
        android:textSize="14dp"
        android:text="@string/schedule_type_hourly_description"
        android:textColor="#222"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:id="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E0EAEF"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:id="@+id/schedule_type_period"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/schedule_type_period_title"
        android:paddingLeft="26dp"
        android:paddingTop="5dp"
        android:textColor="@color/android_blue_dark"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="26dp"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        android:paddingLeft="46dp"
        android:textSize="14dp"
        android:text="@string/schedule_type_period_description"
        android:textColor="#222"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:id="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E0EAEF"
        />
  </LinearLayout>


</LinearLayout>
