<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="#fff"
    android:clickable="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:text="@string/schedule"
            android:id="@+id/schedule_label"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="15dp"
            android:textColor="#bfbfbf"
            android:visibility="visible"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:background="#aaefefef" />

        <Spinner
            android:id="@+id/schedules_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/schedule_label"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:text="@string/doses_and_times"
            android:id="@+id/doses_and_times_label"
            android:layout_below="@+id/schedules_spinner"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:textSize="15dp"
            android:textColor="#bfbfbf"
            android:visibility="visible"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:background="#aaefefef"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/doses_and_times_label"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:id="@+id/linearLayout">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.70"
                android:layout_marginRight="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/schedule_timetable_time_column"
                    android:id="@+id/textView2"
                    android:textColor="@color/android_blue_dark"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/imageView"
                    android:layout_below="@+id/textView2"
                    android:layout_alignParentLeft="true"
                    android:background="@color/android_blue" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/schedule_timetable_dose_column"
                    android:id="@+id/textView3"
                    android:textColor="@color/android_blue_dark"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/imageView1"
                    android:layout_below="@+id/textView3"
                    android:layout_alignParentLeft="true"
                    android:background="@color/android_blue" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/linearLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/schedule_timetable_container">


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/timetable_divider"
            android:layout_below="@id/schedule_timetable_container"
            android:background="@color/android_blue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:text="@string/schedule_repeat_days"
            android:id="@+id/repeat_label"
            android:layout_below="@+id/schedule_timetable_container"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:textSize="15dp"
            android:textColor="#bfbfbf"
            android:visibility="visible"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:background="#aaefefef"
            android:layout_marginTop="30dp" />

        <include
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            layout="@layout/schedule_day_selector"
            android:layout_marginTop="5dp"
            android:layout_marginRight="0dp"
            android:layout_below="@id/repeat_label"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>
</ScrollView>